[package]
name = "tcp_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1.47.1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version="1.0.228", features=["derive"] }
serde_json = "1.0.145"
uuid = { version="1.18.1", features=["v4"] }
tracing = "0.1.41"
tracing-subscriber = "0.3"
axum = { version = "0.8.6", features = ["ws"] }
futures = "0.3.31"
tower-http = { version = "0.6.6", features = ["fs"] }
